--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.3.2",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
