--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.3.2",
     "axios": "^1.6.8",
+    "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
+    "next-i18next": "^15.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
