--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.5",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
