--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.3.2",
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.49.2",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.5",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-i18next": "^14.1.2",
     "zustand": "^4.5.2"
   },
