--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.49.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
+    "framer-motion": "^11.3.31",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
