--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.3.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-query-devtools": "^5.49.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.3.31",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
